--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
         .cat-ibb { background-color: #f1c40f; color: #000; } 
         .cat-iskele { background-color: #7f8c8d; } 
         .cat-terminal { background-color: #2c3e50; } 
-        .cat-lezzet { background-color: #d84315; } /* YENİ RENK: Kiremit */
+        /* DÜZELTME: Rengi sarı yapıp yazı rengini siyah yaptık */
+        .cat-lezzet { background-color: #ffeb3b; color: #000; } 
     </style>
 </head>
 <body>
@@ -154,7 +155,7 @@
         var goldIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-gold.png'});
         var greyIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-grey.png'});
         var blackIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-black.png'});
-        var yellowIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png'}); // YENİ İKON
+        var yellowIcon = new LeafIcon({iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-yellow.png'}); 
 
         // KATMAN GRUPLARI
         var layerTarih = L.layerGroup();
@@ -165,10 +166,10 @@
         var layerIBB = L.layerGroup();
         var layerIskele = L.layerGroup();
         var layerTerminal = L.layerGroup();
-        var layerLezzet = L.layerGroup(); // YENİ KATMAN
+        var layerLezzet = L.layerGroup(); 
 
         var locations = [
-            // --- TARİHİ LEZZETLER (YENİ) ---
+            // --- TARİHİ LEZZETLER ---
             { title: "Vefa Bozacısı", lat: 41.0157, lng: 28.9594, type: "cat-lezzet", category: "Tarihi Lezzet", desc: "1876'dan beri değişmeyen gelenek.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/2f/Vefa_Bozacisi.jpg/640px-Vefa_Bozacisi.jpg" },
             { title: "Tarihi Sultanahmet Köftecisi", lat: 41.0076, lng: 28.9765, type: "cat-lezzet", category: "Tarihi Lezzet", desc: "1920'den beri Selim Usta.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/c/cd/Sultanahmet_Square_Obelisks.jpg/640px-Sultanahmet_Square_Obelisks.jpg" },
             { title: "Hafız Mustafa 1864", lat: 41.0143, lng: 28.9734, type: "cat-lezzet", category: "Tatlı", desc: "İstanbul'un en eski şekerlemecisi.", img: "https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Eminonu_Square_Istanbul.jpg/640px-Eminonu_Square_Istanbul.jpg" },
@@ -303,7 +304,7 @@
             else if (loc.type === 'cat-ibb') { selectedIcon = goldIcon; targetLayer = layerIBB; } 
             else if (loc.type === 'cat-iskele') { selectedIcon = greyIcon; targetLayer = layerIskele; } 
             else if (loc.type === 'cat-terminal') { selectedIcon = blackIcon; targetLayer = layerTerminal; } 
-            else if (loc.type === 'cat-lezzet') { selectedIcon = yellowIcon; targetLayer = layerLezzet; } // YENİ KONTROL
+            else if (loc.type === 'cat-lezzet') { selectedIcon = yellowIcon; targetLayer = layerLezzet; } 
             
             if (targetLayer) {
                 var marker = L.marker([loc.lat, loc.lng], {icon: selectedIcon});
@@ -332,7 +333,7 @@
         layerIBB.addTo(map);
         layerIskele.addTo(map);
         layerTerminal.addTo(map);
-        layerLezzet.addTo(map); // YENİ EKLEME
+        layerLezzet.addTo(map);
 
         var overlayMaps = {
             "<span style='color:#e74c3c'>■</span> Tarihi Yerler": layerTarih,
@@ -343,7 +344,7 @@
             "<span style='color:#f1c40f'>■</span> İBB Sosyal Tesisleri": layerIBB, 
             "<span style='color:#7f8c8d'>■</span> Vapur İskeleleri": layerIskele, 
             "<span style='color:#2c3e50'>■</span> Terminaller & Havalimanları": layerTerminal,
-            "<span style='color:#d84315'>■</span> Tarihi Lezzetler": layerLezzet // YENİ MENÜ ÖĞESİ
+            "<span style='color:#ffeb3b'>■</span> Tarihi Lezzetler": layerLezzet // DÜZELTME: Kutu rengini sarı yaptık
         };
 
         var isMobile = window.innerWidth < 768;
